[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Levels/Data_Structures/4 - Intro to Arrays A.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateRight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/UseItem.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Pickup.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Key.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Inventory.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateLeft.tscn" type="PackedScene" id=19]

[node name="4 - Intro to Arrays A" type="Node2D"]
script = ExtResource( 1 )

[node name="Inventory" parent="." instance=ExtResource( 13 )]

[node name="Grid" parent="." instance=ExtResource( 11 )]

[node name="Robot" parent="Grid" instance=ExtResource( 17 )]

[node name="Button1" parent="Grid" instance=ExtResource( 4 )]

[node name="DoorR" parent="Grid" instance=ExtResource( 18 )]

[node name="DoorR2" parent="Grid" instance=ExtResource( 18 )]

[node name="DoorB" parent="Grid" instance=ExtResource( 18 )]

[node name="DoorG" parent="Grid" instance=ExtResource( 18 )]

[node name="Door" parent="Grid" instance=ExtResource( 18 )]

[node name="KeyR" parent="Grid" instance=ExtResource( 10 )]

[node name="KeyG" parent="Grid" instance=ExtResource( 10 )]

[node name="KeyB" parent="Grid" instance=ExtResource( 10 )]

[node name="KeyR2" parent="Grid" instance=ExtResource( 10 )]

[node name="Level Control" parent="." instance=ExtResource( 6 )]

[node name="IDE" parent="." instance=ExtResource( 8 )]

[node name="Counter" parent="IDE/Main" index="4"]
maxBlocks = 18

[node name="CodeBlockBar" parent="." instance=ExtResource( 15 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 9 )]

[node name="RotateLeft" parent="CodeBlockBar" instance=ExtResource( 19 )]

[node name="RotateRight" parent="CodeBlockBar" instance=ExtResource( 2 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 16 )]

[node name="Pickup" parent="CodeBlockBar" instance=ExtResource( 7 )]

[node name="UseItem" parent="CodeBlockBar" instance=ExtResource( 5 )]

[node name="Background" parent="." instance=ExtResource( 12 )]

[node name="TextBox" parent="." instance=ExtResource( 3 )]

[node name="PopupMenu" parent="." instance=ExtResource( 14 )]

[editable path="IDE"]
[editable path="IDE/Main"]
